deployment/aggregator-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-out-of-cluster
  namespace: traefik-out-of-cluster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-out-of-cluster
  template:
    metadata:
      labels:
        app: traefik-out-of-cluster
    spec:
      containers:
      - name: agent
        image: simonstiil/traefik-out-of-cluster:main
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: ca-cert
          mountPath: /etc/ssl/certs
          readOnly: true
      
      volumes:
      - name: ca-cert
        configMap:
          name: organization-ca
      serviceAccountName: ro-ingress-services-routes
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-out-of-cluster
  namespace: traefik-out-of-cluster
spec:
  selector:
    app: traefik-out-of-cluster
  ports:
    - protocol: TCP
      port: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-out-of-cluster
  namespace: traefik-out-of-cluster
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.options: traefik-out-of-cluster-mtls@kubernetescrd
spec:
  rules:
  - host: traefik-out-of-cluster.k3s.stiil.dk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-out-of-cluster
            port:
              number: 8080
